// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WelcomePage /> component should render component correctly 1`] = `
<Fragment>
  <WithStyles(CssBaseline) />
  <WithStyles(GridContainer)>
    <main
      className="WelcomePage-layout-1"
    >
      <WithStyles(Paper)
        className="WelcomePage-paper-3"
      >
        <WithStyles(Typography)
          align="center"
          className="WelcomePage-h1-2"
          color="textPrimary"
          component="h1"
          gutterBottom={true}
          variant="h2"
        >
          Welcome to WipLean
        </WithStyles(Typography)>
        <WithStyles(Typography)
          align="center"
          variant="subtitle1"
        >
          Before you start using WipLean, please complete your data below.
        </WithStyles(Typography)>
        <WithStyles(Grid)
          container={true}
          spacing={24}
        >
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="fname"
              fullWidth={true}
              id="firstName"
              label="First name"
              name="firstName"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="lname"
              fullWidth={true}
              id="lastName"
              label="Last name"
              name="lastName"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="billing address-level2"
              fullWidth={true}
              id="city"
              label="City"
              name="city"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              fullWidth={true}
              id="state"
              label="State/Province/Region"
              name="state"
              required={false}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="billing postal-code"
              fullWidth={true}
              id="zip"
              label="Zip / Postal code"
              name="zip"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="billing country"
              fullWidth={true}
              id="country"
              label="Country"
              name="country"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  color="secondary"
                  name="saveAddress"
                  value="yes"
                />
              }
              label="Use this address for payment details"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="WelcomePage-buttons-4"
            item={true}
          >
            <WithStyles(Button)>
              Logout
            </WithStyles(Button)>
            <WithStyles(Button)
              className="WelcomePage-button-5"
              color="primary"
              variant="contained"
            >
              Update and next
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Paper)>
    </main>
  </WithStyles(GridContainer)>
</Fragment>
`;

exports[`<WelcomePage /> component should to call function logout when clicked at Button 1`] = `
<Fragment>
  <WithStyles(CssBaseline) />
  <WithStyles(GridContainer)>
    <main
      className="WelcomePage-layout-1"
    >
      <WithStyles(Paper)
        className="WelcomePage-paper-3"
      >
        <WithStyles(Typography)
          align="center"
          className="WelcomePage-h1-2"
          color="textPrimary"
          component="h1"
          gutterBottom={true}
          variant="h2"
        >
          Welcome to WipLean
        </WithStyles(Typography)>
        <WithStyles(Typography)
          align="center"
          variant="subtitle1"
        >
          Before you start using WipLean, please complete your data below.
        </WithStyles(Typography)>
        <WithStyles(Grid)
          container={true}
          spacing={24}
        >
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="fname"
              fullWidth={true}
              id="firstName"
              label="First name"
              name="firstName"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="lname"
              fullWidth={true}
              id="lastName"
              label="Last name"
              name="lastName"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="billing address-level2"
              fullWidth={true}
              id="city"
              label="City"
              name="city"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              fullWidth={true}
              id="state"
              label="State/Province/Region"
              name="state"
              required={false}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="billing postal-code"
              fullWidth={true}
              id="zip"
              label="Zip / Postal code"
              name="zip"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={6}
            xs={12}
          >
            <TextField
              autoComplete="billing country"
              fullWidth={true}
              id="country"
              label="Country"
              name="country"
              required={true}
              select={false}
              variant="standard"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  color="secondary"
                  name="saveAddress"
                  value="yes"
                />
              }
              label="Use this address for payment details"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="WelcomePage-buttons-4"
            item={true}
          >
            <WithStyles(Button)
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
            >
              Logout
            </WithStyles(Button)>
            <WithStyles(Button)
              className="WelcomePage-button-5"
              color="primary"
              variant="contained"
            >
              Update and next
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Paper)>
    </main>
  </WithStyles(GridContainer)>
</Fragment>
`;
